# optee_test

./: .gitignore  Android.mk  CMakeLists.txt  LICENSE-BSD  LICENSE.md  Makefile  Makefile-gp-ts  Notice.md  README.md
host/xtest/: CMakeLists.txt  Makefile  adbg_case_declare.h  adbg_entry_declare.h  aes_gcm_counter_overflow_test_corner.h  aes_gcm_counter_overflow_test_decrypt.h  aes_gcm_counter_overflow_test_encrypt.h  aes_perf.c  aes_perf.h  applogin_1000.c  asteec_1000.c  asym_cipher_perf.c  asym_perf.c  benchmark_1000.c  benchmark_2000.c  clear_storage.c  clear_storage.h  crypto_common.h  ffa_spmc_1000.c  gcov.c  hash_perf.c  install_ta.c  pkcs11_1000.c  pkcs11_1000.h  rand_stream.c  rand_stream.h  regression_1000.c  regression_1100.c  regression_2000.c  regression_20000.c  regression_4000.c  regression_4000_data.h  regression_4100.c  regression_5000.c  regression_6000.c  regression_7000.c  regression_8000.c  regression_8100.c  regression_9000.c  sdp_basic.c  (+26 more)
host/xtest/nist/: CMACGenAES192.h  CMACVerAES128.h  HMAC.h  SHA1LongMsg.h  SHA1ShortMsg.h  SHA224LongMsg.h  SHA224ShortMsg.h  SHA256LongMsg.h  SHA256ShortMsg.h  SHA384ShortMsg.h  SHA3_224ShortMsg.h  SHA3_256ShortMsg.h  SHA3_384LongMsg.h  SHA3_384ShortMsg.h  SHA3_512LongMsg.h  SHA3_512ShortMsg.h  SHA512ShortMsg.h  VADT128.h  VADT192.h  VADT256.h  VNT128.h  VNT192.h  VNT256.h  VPT128.h  VPT192.h  VPT256.h  VTT128.h  VTT192.h  VTT256.h  XTSGenAES128.h  XTSGenAES256.h  gcmDecrypt128.h  gcmDecrypt192.h  gcmDecrypt256.h
ta/: CMakeLists.txt  Makefile  Makefile.gmake  Makefile.tas  identity_subkey2.pem  mid_level_subkey.pem  subkey_notes.txt  ta_common.mk  top_level_subkey.pem
ta/aes_perf/: Android.mk  Makefile  ta_aes_perf.c  ta_entry.c
ta/aes_perf/include/: ta_aes_perf.h  ta_aes_perf_priv.h  user_ta_header_defines.h
ta/asym_cipher_perf/: Android.mk  Makefile  sub.mk  ta_asym_cipher_perf.c  ta_entry.c
ta/asym_cipher_perf/include/: ta_asym_cipher_perf.h  ta_asym_cipher_perf_priv.h  user_ta_header_defines.h
ta/bad_payload/: Makefile  corrupt.py
ta/bad_payload/include/: ta_bad_payload.h  user_ta_header_defines.h
ta/bonnie/: Makefile  bonnie.c  sub.mk  ta_entry.c
ta/bonnie/include/: bonnie.h  ta_bonnie.h  user_ta_header_defines.h
ta/bti_test/: Android.mk  Makefile  bti_stubs_a64.S  bti_test.S  sub.mk  ta_arm_bti.c  ta_entry.c
ta/bti_test/include/: ta_arm_bti.h  ta_arm_bti_priv.h  ta_bti.h  user_ta_header_defines.h
ta/concurrent/: Android.mk  Makefile  atomic_a32.S  atomic_a64.S  sub.mk  ta_entry.c
ta/concurrent/include/: ta_concurrent.h  user_ta_header_defines.h
ta/concurrent_large/: Android.mk  Makefile  ta_entry.c
ta/concurrent_large/include/: ta_concurrent_large.h  user_ta_header_defines.h
ta/create_fail_test/: Android.mk  Makefile  ta_entry.c
ta/create_fail_test/include/: ta_create_fail_test.h  user_ta_header_defines.h
ta/crypt/: Android.mk  Makefile  aes_impl.c  aes_taf.c  arith_taf.c  cryp_taf.c  derive_key_taf.c  handle.c  mbed_taf.c  mbedtls_taf.c  seed_rng_taf.c  sha2_impl.c  sha2_taf.c  sub.mk  ta_entry.c
ta/crypt/include/: aes_taf.h  arith_taf.h  cryp_taf.h  mbed_taf.h  mbedtls_taf.h  seed_rng_taf.h  sha2_impl.h  sha2_taf.h  ta_crypt.h  user_ta_header_defines.h
ta/crypt_sm/: Android.mk  Makefile  sm2_taf.c  sm3_taf.c  sm4_taf.c  sub.mk  ta_entry.c
ta/crypt_sm/include/: sm2_taf.h  sm3_taf.h  sm4_taf.h  ta_crypt_sm.h  user_ta_header_defines.h
ta/crypto_perf/: Android.mk  Makefile  sub.mk  ta_crypto_perf.c  ta_entry.c
ta/crypto_perf/include/: ta_crypto_perf.h  ta_crypto_perf_priv.h  user_ta_header_defines.h
ta/enc_fs/include/: enc_fs_key_manager_test.h
ta/fake_uuid/: Makefile  ta_entry.c
ta/fake_uuid/include/: ta_fake_uuid.h  user_ta_header_defines.h
ta/gcov/: Android.mk  Makefile  sub.mk  ta_gcov.c
ta/gcov/include/: ta_gcov.h  user_ta_header_defines.h
ta/hash_perf/: sub.mk  ta_entry.c  ta_hash_perf.c
ta/hash_perf/include/: ta_hash_perf.h  ta_hash_perf_priv.h  user_ta_header_defines.h
ta/include/: GP_defs.h  ta_storage.h
ta/large/: Android.mk  Makefile  ta_entry.c
ta/large/include/: ta_large.h  user_ta_header_defines.h
ta/latency_perf/: Android.mk  Makefile  ta_entry.c
ta/latency_perf/include/: latency_common.h  ta_latency_perf.h  ta_latency_perf_priv.h  user_ta_header_defines.h
ta/miss/: Android.mk
ta/miss/include/: user_ta_header_defines.h
ta/ocall/: Android.mk  Makefile  sub.mk  ta_entry.c  ta_ocall.c
ta/ocall/include/: ta_ocall.h  ta_ocall_data.h  ta_ocall_test.h  user_ta_header_defines.h
ta/os_test/: Android.mk  Makefile  attestation.c  init.c  os_test.c  pauth_a64.S  sub.mk  ta_arm_pauth.c  ta_entry.c  tb_addsub.c  tb_cmp.c  tb_conv.c  tb_div.c  tb_fmm.c  tb_gcd.c  tb_io.c  tb_modulus.c  tb_mul.c  tb_prime.c  tb_shift.c  tb_var.c  test_float_subj.c  test_float_subj.h  testframework.c
ta/os_test/include/: init.h  os_test.h  ta_os_test.h  tb_asserts.h  tb_macros.h  testframework.h  user_ta_header_defines.h
ta/os_test_lib/: Makefile  os_test_lib.c  sub.mk
ta/os_test_lib/include/: os_test_lib.h
ta/os_test_lib_dl/: Makefile  os_test_lib_dl.c  sub.mk
ta/os_test_lib_dl/include/: os_test_lib_dl.h
ta/pauth_test/: Android.mk  Makefile  pauth_a64.S  sub.mk  ta_arm_pauth.c  ta_entry.c
ta/pauth_test/include/: ta_arm_pauth.h  ta_arm_pauth_priv.h  user_ta_header_defines.h
ta/rpc_test/: Android.mk  Makefile  ta_entry.c  ta_rpc.c
ta/rpc_test/include/: ta_rpc.h  ta_rpc_test.h  user_ta_header_defines.h
ta/sdp_basic/: Android.mk  Makefile  ta_sdp_basic.c
ta/sdp_basic/include/: ta_sdp_basic.h  user_ta_header_defines.h
ta/sdp_perf/: Android.mk  Makefile  sub.mk  ta_entry.c  ta_sdp_perf.c
ta/sha_perf/: Android.mk  Makefile  ta_entry.c  ta_sha_perf.c
ta/sims/: Android.mk  Makefile  sub.mk  ta_entry.c  ta_sims.c
ta/sims/include/: ta_sims.h  (+2 more)
ta/socket/: ta_entry.c
ta/storage/: Android.mk  Makefile  storage.c  ta_entry.c
ta/storage2/: Android.mk  Makefile  sub.mk
ta/storage_benchmark/: Android.mk  benchmark.c  ta_entry.c
ta/subkey1/: Makefile  ta_entry.c
ta/subkey2/: Makefile  ta_entry.c
ta/supp_plugin/: Android.mk  ta_entry.c
(+132 files in other folders)
